name:                todo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jean-lopes/todo#readme
license:             BSD3
license-file:        LICENSE
author:              Jean Carlo Giambastiani Lopes
maintainer:          jean.lopes@hotmail.com.br
copyright:           Copyright: (c) 2016 Jean Carlo Giambastiani Lopes
category:            Haskell
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       text == 1.2.2.1,
                       transformers == 0.4.2.0,
                       sqlite-simple == 0.4.9.0,
                       scotty == 0.11.0,
                       wai-extra == 3.0.15.2,
                       blaze-html == 0.8.1.1
  default-language:    Haskell2010

executable todo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , todo
  default-language:    Haskell2010

test-suite todo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , todo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jean-lopes/todo
